# MapReduce

./: CMakeLists.txt  MapReduceFramework.cpp  MapReduceFramework.h
tests/: atomicdemo.cpp  barrierdemo.cpp
